--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <p>此房源位于大阪，离最大的中央市场步行3分钟，您可以在这里品尝到最新鲜最便宜的海鲜，里面还有一家在当地非常有名的寿司店（需要提前去排队）。</p>
             <p>民宿里配备了高端床和床垫，羽绒被和羽绒枕以及各种高端的洗漱用品。在住宿期间，您还可以在榻榻米房间里边观看日式小庭院边享受日式茶道和和服体验。</p>
             <p>分为一号馆和二号馆，日式民宿，面积60平米，里面一个洋室房间，有两张1.4米的双人床。一个榻榻米房间可以睡三个人，客厅里有一个塌塌米茶室，可以放两个榻榻被褥，最多可入住九人。</p>
+            <p><strong>地址:</strong> 大阪市福島区野田2丁目10-24</p>
 
             <!-- 图片网格展示 -->
             <div class="image-gallery">
@@ -118,6 +119,7 @@
             <p>この宿泊施設は大阪にあり、最大の中央市場から徒歩3分です。ここでは新鮮で安価なシーフードを味わうことができ、地元で非常に有名な寿司店もあります（早めに行列に並ぶ必要があります）。</p>
             <p>高級なベッド、マットレス、羽毛布団、羽毛枕、高級なアメニティが備わっています。滞在中は畳の部屋で日本庭園を眺めながら、日本の茶道や着物体験をお楽しみいただけます。</p>
             <p>一号館と二号館に分かれており、和風宿泊施設で、面積は60平米です。1つの洋室には1.4メートルのダブルベッドが2台あり、畳の部屋では3人が就寝可能です。リビングには畳の茶室があり、2つの布団を敷くことができ、最大9人まで宿泊可能です。</p>
+            <p><strong>住所:</strong> 大阪市福島区野田2丁目10-24</p>
 
             <!-- 图片网格展示 -->
             <div class="image-gallery">
@@ -134,6 +136,7 @@
             <p>This property is located in Osaka, a 3-minute walk from the largest central market. You can enjoy the freshest and cheapest seafood here, and there is a very famous sushi restaurant in the area (be sure to queue up early).</p>
             <p>The guesthouse is equipped with high-end beds, mattresses, down comforters, down pillows, and premium toiletries. During your stay, you can enjoy a Japanese tea ceremony and kimono experience in a tatami room overlooking a small Japanese garden.</p>
             <p>The guesthouse has two buildings: Building 1 and Building 2. Each is a Japanese-style inn covering 60 square meters. Inside, there is one Western-style room with two 1.4-meter double beds. The tatami room can accommodate three people, and the living room has a tatami tea room with space for two more futons, making the maximum capacity nine people.</p>
+            <p><strong>Address:</strong> 2-10-24 Noda, Fukushima-ku, Osaka</p>
 
             <!-- 图片网格展示 -->
             <div class="image-gallery">
