--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <!-- 图片网格展示 -->
             <div class="image-gallery">
                 <img src="https://i.imgur.com/iQ331Ls.jpg" alt="Guesthouse Image 1">
-                <img src="https://i.imgur.com/q0tLAOc.jpg" alt="Guesthouse Image 2">
+                <img src="https://imgur.com/pYwwwR6.jpg" alt="Guesthouse Image 2">
                 <img src="https://i.imgur.com/XuCrRAS.jpg" alt="Guesthouse Image 3">
                 <img src="https://i.imgur.com/iEWr04z.jpg" alt="Guesthouse Image 4">
             </div>
@@ -124,7 +124,7 @@
             <!-- 图片网格展示 -->
             <div class="image-gallery">
                 <img src="https://i.imgur.com/iQ331Ls.jpg" alt="Guesthouse Image 1">
-                <img src="https://i.imgur.com/q0tLAOc.jpg" alt="Guesthouse Image 2">
+                <img src="https://imgur.com/pYwwwR6.jpg" alt="Guesthouse Image 2">
                 <img src="https://i.imgur.com/XuCrRAS.jpg" alt="Guesthouse Image 3">
                 <img src="https://i.imgur.com/iEWr04z.jpg" alt="Guesthouse Image 4">
             </div>
@@ -141,7 +141,7 @@
             <!-- 图片网格展示 -->
             <div class="image-gallery">
                 <img src="https://i.imgur.com/iQ331Ls.jpg" alt="Guesthouse Image 1">
-                <img src="https://i.imgur.com/q0tLAOc.jpg" alt="Guesthouse Image 2">
+                <img src="https://imgur.com/pYwwwR6.jpg" alt="Guesthouse Image 2">
                 <img src="https://i.imgur.com/XuCrRAS.jpg" alt="Guesthouse Image 3">
                 <img src="https://i.imgur.com/iEWr04z.jpg" alt="Guesthouse Image 4">
             </div>
