--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             <p>民宿里配备了高端床和床垫，羽绒被和羽绒枕以及各种高端的洗漱用品。在住宿期间，您还可以在榻榻米房间里边观看日式小庭院边享受日式茶道和和服体验。</p>
             <p>分为一号馆和二号馆，日式民宿，面积60平米，里面一个洋室房间，有两张1.4米的双人床。一个榻榻米房间可以睡三个人，客厅里有一个塌塌米茶室，可以放两个榻榻被褥，最多可入住九人。</p>
             <p><strong>地址:</strong> 大阪市福島区野田2丁目10-24</p>
+            <p><strong>预定要求:</strong> 2泊3日以上</p>
+            <p><strong>対応言語:</strong> 英语・中文・日语</p>
 
             <!-- 图片网格展示 -->
             <div class="image-gallery">
@@ -120,6 +122,8 @@
             <p>高級なベッド、マットレス、羽毛布団、羽毛枕、高級なアメニティが備わっています。滞在中は畳の部屋で日本庭園を眺めながら、日本の茶道や着物体験をお楽しみいただけます。</p>
             <p>一号館と二号館に分かれており、和風宿泊施設で、面積は60平米です。1つの洋室には1.4メートルのダブルベッドが2台あり、畳の部屋では3人が就寝可能です。リビングには畳の茶室があり、2つの布団を敷くことができ、最大9人まで宿泊可能です。</p>
             <p><strong>住所:</strong> 大阪市福島区野田2丁目10-24</p>
+            <p><strong>予約要件:</strong> 2泊3日以上</p>
+            <p><strong>対応言語:</strong> 英語・中国語・日本語</p>
 
             <!-- 图片网格展示 -->
             <div class="image-gallery">
@@ -137,6 +141,8 @@
             <p>The guesthouse is equipped with high-end beds, mattresses, down comforters, down pillows, and premium toiletries. During your stay, you can enjoy a Japanese tea ceremony and kimono experience in a tatami room overlooking a small Japanese garden.</p>
             <p>The guesthouse has two buildings: Building 1 and Building 2. Each is a Japanese-style inn covering 60 square meters. Inside, there is one Western-style room with two 1.4-meter double beds. The tatami room can accommodate three people, and the living room has a tatami tea room with space for two more futons, making the maximum capacity nine people.</p>
             <p><strong>Address:</strong> 2-10-24 Noda, Fukushima-ku, Osaka</p>
+            <p><strong>Reservation Requirements:</strong> Minimum stay of 2 nights and 3 days</p>
+            <p><strong>Available Languages:</strong> English, Chinese, Japanese</p>
 
             <!-- 图片网格展示 -->
             <div class="image-gallery">
@@ -149,7 +155,7 @@
     </div>
 
     <footer>
-        <p>Contact us | お問い合わせ | 联系我们: +81 070-2610-9074 | xuping201013@gmail.com</p>
+        <p>Contact us at: +81 070-2610-9074 | Email: xuping201013@gmail.com</p>
     </footer>
 </body>
 </html>
